--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1581,108 +1581,107 @@ stories:
   domain: http://www.heraldchronicle.com/
   link: https://www.heraldchronicle.com/news/world/vatican-tribunal-now-overwhelmed-by-clergy-abuse-cases/article_8398ca3d-bcdb-5000-908a-5dc381e443c5.html
 images:
-- name: stories-new-beach-rocks-currents-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-beach-rocks-currents-kand-two.jpg
-- name: cargo-ship-cargo-ship-on-sea-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-matrix.jpg
-- name: subway-subway-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-mucha-mult.jpg
-- name: fence-fence-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-matrix.jpg
-- name: machine-road-machine-road-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-diego-rivera1.jpg
-- name: nazi-invasion-walk-through-garden-tunnel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-walk-through-garden-tunnel.jpg
-- name: legal-statue-legalstatue-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-satan-red.jpg
-- name: old-cabin-oldcabin-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-pablo-blue.JPG
-- name: lincoln-memorial-lincolnmemorial-emily-carr.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-emily-carr.jpg
-- name: la-muse-fat-old-pigeon-on-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-fat-old-pigeon-on-fence.jpg
-- name: blossombar-yellow-collage-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-collage-file-00-00-50-62.jpg
-- name: nazi-invasion-old-gas-station_36588462091_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-old-gas-station_36588462091_o.jpg
-- name: catacombs-catacombs-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-missle.jpg
-- name: gypsymosaic-gypsy-eyes-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-internet-numbers.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crunch-paper.jpg
-- name: oldsmallboat-oldsmallboat-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-internet-numbers.jpg
-- name: nazi-invasion-wild-gease-in-the-water.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-wild-gease-in-the-water.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-really-hot.jpg
-- name: mosaic-face-mosaic-face-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-copper-circuit-2.jpg
-- name: oldhousecars-house-old-cars-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-crunch-paper.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-oily-mcoilface.JPG
-- name: file-00-00-59-36 2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-00-59-36
-    2.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-spagetti-accident.JPG
-- name: paris-paris-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-far-away.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-alien-goggles.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit-2.png
-- name: birdhouse-birdhouse-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-oily-mcoilface.jpg
-- name: legal-statue-legalstatue-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-diego-rivera1.jpg
-- name: window-window-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-post-modern.jpg
-- name: white-house-lawn-white-house-lawn-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-nazi-poster.jpg
-- name: aws-s3-stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-dark-dali.jpg
-- name: art-museum-art-museum-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-oily-mcoilface.jpg
-- name: losangelescloudyday-los-angeles-downtown-freeway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/losangelescloudyday-los-angeles-downtown-freeway.jpg
-- name: copper-circuit-shipping-container-ship-sunny-day.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-shipping-container-ship-sunny-day.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-sunday.jpg
-- name: ellis-island-ellis-island-room-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-rain.jpg
-- name: berlinwall-DSC-0084-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-purp-paper.jpg
-- name: copper-circuit-train-station-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-station-statue.jpg
-- name: ellis-island-ellis-island-room-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-colorful-dream.jpg
-- name: wreck-DSC_0076.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wreck-DSC_0076.jpg
+- name: yuma-bank-yuma-bak-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-blue-granite.jpg
+- name: mosaic-face-mosaic-face-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-green-zuma.jpg
 - name: sand-hand-sand-hand-jap-dys-1.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-jap-dys-1.jpg
-- name: aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-dragon-shadows-black-white-outline.jpg
-- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
-- name: blossombar-colorful-dream-file-00-00-24-99.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-colorful-dream-file-00-00-24-99.jpg
-- name: fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-ww2-dresden.jpg
-- name: braceros-domingo-ulloa-old-broken-piano-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-old-broken-piano-street.jpg
-- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
-- name: castle-wall-DSC-0067-satan-red.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-satan-red.JPG
-- name: hollywood-building-hollywood-building-pablo-blue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-pablo-blue.jpg
-- name: yosemite-yosemite-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-diego-rivera1.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-bright-sand.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-purple-pond.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-dali-two.jpg
+- name: stalin-time-frosty-downtown-lights.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-frosty-downtown-lights.jpg
+- name: stories-36349148770-1a9d2692b2-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
+- name: ellis-island-ellis-island-room-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-atari-missle.jpg
+- name: stalin-time-train-subway-125th-down-the-line.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-subway-125th-down-the-line.jpg
+- name: powerlines-power-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-kandinsky-bv.jpg
+- name: oldhouse-oldhouse-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dali-three.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-mucha-mult.jpg
+- name: scream-IMG_8494.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_8494.jpg
+- name: oldcabin-store-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-asteroids.jpg
+- name: old-house-oldhouse-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-smooth-ride.jpg
+- name: old-cabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
+- name: cyber-api-description-wars-cannon-wall-satan.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cyber-api-description-wars-cannon-wall-satan.jpg
+- name: server-cloud-server-racks-door-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-green-zuma.jpg
+- name: oldhotel-oldhotel-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-nazi-poster.jpg
+- name: machine-road-machine-road-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-dark-soul.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-clean-view.jpg
+- name: fence-fence-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
+- name: white-house-lawn-white-house-lawn-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-yellow-paper.jpg
+- name: old-school-house-old-schoolhouse-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-yellow-paper.jpg
+- name: blossombar-crafty-painting-file-00-00-50-25.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-25.jpg
+- name: old-gas-pumps-oldgaspumps-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-purp-paper.jpg
+- name: rain-princess-bletchley-computer-racks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-bletchley-computer-racks.jpg
+- name: cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-space-pizza.jpg
+- name: christianity-christianity-under-construction-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-ww2-color.jpg
+- name: window-window-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-purple-storm.jpg
+- name: rain-princess-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
+- name: docks-docks-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-blue-brush.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-granite.jpg
+- name: carry-load-carryload-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-graham-sutherland.jpg
+- name: old-barn-old-barn-1500-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-atari-asteroids.jpg
+- name: hollywood-building-hollywood-building-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-blue-circuit-4.jpg
+- name: stories-new-75-125-800-500-0-max-0-1-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-75-125-800-500-0-max-0-1-1.jpg
+- name: gypsy-wagon-gypsywagon-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-spagetti-accident.jpg
+- name: san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-blue-brush.jpg
+- name: copper-circuit-roman-marcus-looking-down.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-roman-marcus-looking-down.jpg
+- name: cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-crafty-painting.jpg
+- name: capital-battle-capitolbattle-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-graham-sutherland.jpg
+- name: white-house-lawn-white-house-lawn-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-really-hot.jpg
+- name: gypsymosaic-gypsy-eyes-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-yellow-collage.jpg
+- name: nazi-invasion-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-fire-truck-pulling-out-of-station.jpg
+- name: blossombar-dark-soul-file-00-00-50-62.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-dark-soul-file-00-00-50-62.jpg
+- name: meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-alberto-giacometti.jpg
+- name: oldhouse-oldhouse-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-far-away.jpg
+- name: old-house-oldhouse-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-dali-two.jpg
+- name: trucksilo-trucksilo-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-deep-connections.jpg
 ---
 Lake Roosevelt Wrestlers Place In Cashmere Tourney.&nbsp;Autumn Life Gains New Director Of Behavioral Services.&nbsp;Blue Dolphins Host Sanctioned Meet.&nbsp;House Passes Reworked North American Trade Deal In Victory For Trump, Democrats.&nbsp;Make Planning To Pay For College A New Years Resolution.&nbsp;Lafayette County Becomes Second Amendment Sanctuary.&nbsp;Vatican Tribunal Now Overwhelmed By Clergy Abuse Cases.&nbsp;Democrats Debate Whether Medicare For All Is Realistic.&nbsp;
